--- a/ui/index.html
+++ b/ui/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 编程小助手</title>
+    <title>AI 编程知识库</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico?v=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=1.0">
     <style>
